--- a/english.html
+++ b/english.html
@@ -87,11 +87,11 @@
 
             <div class="col-12 col-xl-10 offset-xl-1 lady">
                 <div class="main" data-aos="fade-down" data-aos-duration="700">
-                    <h1 class="advH1">CREATIV<span class="dot">E</span>
+                    <h1 class="advH1">CREATIV<span class="dot">E.</span>
                         <br />
-                        ANALYTICA<span class="dot">L</span>
+                        ANALYTICA<span class="dot">L.</span>
                         <br />
-                        EFFICIEN<span class="dot">T</span>
+                        EFFICIEN<span class="dot">T.</span>
 
                     </h1>
 
