--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
 
             <div class="col-12 col-xl-10 offset-xl-1 lady">
                 <div class="main" data-aos="fade-down" data-aos-duration="700">
-                    <h1 class="advH1">КРЕАТИВЕ<span class="dot">Н</span>
+                    <h1 class="advH1">КРЕАТИВЕ<span class="dot">Н.</span>
                         <br />
-                        АНАЛИТИЧЕ<span class="dot">Н</span>
+                        АНАЛИТИЧЕ<span class="dot">Н.</span>
                         <br />
-                        ЕФИКАСЕ<span class="dot">Н</span>
+                        ЕФИКАСЕ<span class="dot">Н.</span>
 
                     </h1>
 
