--- a/english.html
+++ b/english.html
@@ -257,7 +257,7 @@
             <div class="col-12">
                 <h3 class="text-center" data-aos="fade-up" data-aos-duration="700">Client Testimonials</h3>
             </div>
-            <div class="col-10 offset-1  col-lg-6 offset-lg-3 testRowFlex" data-aos="fade-down" data-aos-duration="700">
+            <div class="col-10 offset-1  col-xl-8 offset-xl-2 testRowFlex" data-aos="fade-down" data-aos-duration="700">
 
                 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                     <ul class="carousel-indicators">
@@ -266,12 +266,24 @@
                         <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
                         <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
                         <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
                     </ul>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <h4>Excellent knowledge of civil law and procedures, and thus full realization of my
+                            <h4>Great knowledge of civil law and procedures, and thus full realization of my
                                 interests.</h4>
                             <p>Ognen Mancevski</p>
+                        </div>
+                        <div class="carousel-item">
+                            <h4>
+                                The best law office. During
+                                COVID-19, obviously I could not physically meet
+                                with lawyer Alexander, so I was worried about hiring a lawyer with whom
+                                I could not meet. Alexander organized a call on Viber and Zoom
+                                immediately and what he said he would do, he did the best he could.
+                            </h4>
+                            <p>Natalija Jordanovska</p>
                         </div>
                         <div class="carousel-item">
                             <h4>
@@ -292,39 +304,58 @@
                             <h4>Excellent resolution of a property dispute. No further drama or hassle.</h4>
                             <p>Martin Blazevski</p>
                         </div>
+                        <div class="carousel-item">
+                            <h4>
+                                Vlado Aleksijevski helped me to finish a long-term work that
+                                I have been trying to finish it for years. He worked very hard to the
+                                end and I am very grateful!
+                            </h4>
+                            <p>Svetlana Bogdanoska</p>
+                        </div>
                     </div>
 
                 </div>
             </div>
         </div>
 
-
         <div class="row contactRow">
-            <div class="col-12 contactText text-center">
+            <div class="col-12 offset-0 contactText text-center" id="contact">
                 <h3>CONTACT</h3>
             </div>
 
-            <div class="col-10 offset-1 col-md-5 offset-md-1">
-                <div id="googleMap" style="height:350px;"></div>
+            <div class="col-12 offset-0 col-md-6 offset-md-0 col-xl-5 offset-xl-1">
+                <p class="street">Boulevard Turistichka no.50, 6000 Ohrid</p>
+                <p class="workingHour">Working hours: Mon - Fri from 08:00 to 16:00</p>
+                <div id="googleMap"></div>
             </div>
 
-            <div class="col-10 offset-1 col-md-5 offset-md-0">
-                <div></div>
+            <div class="col-12 offset-0 col-md-6 offset-md-0 col-xl-5 offset-xl-0 street2">
+                <div class="bottDiv">
+                    <br />
+                    <p class="bottAdv">Lawyer</p>
+                    <p>Aleksijevski Vlado</p>
+                    <p>070 212 042</p>
+                    <p class="mailAdv">advokat.vladoaleksijevski@gmail.com</p>
+                </div>
+                <div>
+                    <br />
+                    <p class="bottAdv2">Lawyer</p>
+                    <p>Aleksijevski Aleksandar</p>
+                    <p  class="lastNum">046 511 608</p>
+                </div>
             </div>
         </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
+        <footer class="page-footer">
+            <div class="row">
+                <div class="col-12">
+                    <div class="footer-copyright">
+                        © 2020 Vlado Aleksijevski, All Rights Reserved        
+                    </div>
+                   
+                </div>
+            </div>
+        </footer>
 
 
 
