--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <meta name="language" content="English" />
     <meta name="revisit-after" content="30 days" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
-        integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+        integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous" />
     <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json"> -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 
@@ -30,7 +30,6 @@
 </head>
 
 <body data-spy="scroll" data-target=".navbar" data-offset="65">
-
     <!-- Navbar start  -->
 
     <nav class="navbar navbar-expand-md fixed-top d-flex align-items-center">
@@ -40,7 +39,6 @@
             aria-controls="navbar1" aria-expanded="false" aria-label="Toggle navigation">
             <i class="fas fa-bars fa-2x"></i>
         </button>
-
 
         <div class="collapse navbar-collapse" id="navbar1">
             <ul class="navbar-nav ml-auto">
@@ -70,54 +68,48 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link last" href="english.html">En <img class="img" src="images/eng.png"
-                            alt="English language"></a>
+                            alt="English language" /></a>
                 </li>
-
             </ul>
         </div>
     </nav>
 
-
     <!-- Navbar end  -->
-
 
     <!-- Main start -->
 
     <div class="container-fluid">
         <div class="row landingPage d-flex align-items-center" id="home">
-
             <div class="col-12 col-xl-10 offset-xl-1 lady">
                 <div class="main" data-aos="fade-down" data-aos-duration="700">
-                    <h1 class="advH1">КРЕАТИВЕ<span class="dot">Н.</span>
+                    <h1 class="advH1">
+                        КРЕАТИВЕ<span class="dot">Н.</span>
                         <br />
                         АНАЛИТИЧЕ<span class="dot">Н.</span>
                         <br />
                         ЕФИКАСЕ<span class="dot">Н.</span>
-
                     </h1>
 
                     <a class="btn btnLanding" href="#work">ПРИКАЖИ ПОВЕЌЕ</a>
                     <a class="btn btnLanding btnLanding2" href="#work"><i class="fas fa-angle-down"></i></a>
-
-
-
                 </div>
-
             </div>
         </div>
 
         <div class="row workRow">
             <div class="col-12 workFlexRow" id="work">
-
                 <div class="workRowDiv">
                     <div class="panel">
                         <div class="panel-heading text-center">
                             <div class="panel-title">
                                 <a class="btnPanel" data-toggle="collapse" role="button" href="#collapse1"
                                     aria-expanded="false" aria-controls="collapse1">
-                                    <h5>Граѓански спорови <span class="caret"><i class="fas fa-caret-down"></i></span>
+                                    <h5>
+                                        Граѓански спорови
+                                        <span class="caret"><i class="fas fa-caret-down"></i></span>
                                     </h5>
-                                </a></div>
+                                </a>
+                            </div>
                         </div>
                         <div class="panel-collapse collapse" id="collapse1">
                             <div class="panel-body">
@@ -138,9 +130,12 @@
                             <div class="panel-title">
                                 <a class="btnPanel" data-toggle="collapse" role="button" href="#collapse2"
                                     aria-expanded="false" aria-controls="collapse2">
-                                    <h5>Кривични спорови <span class="caret"><i class="fas fa-caret-down"></i></span>
+                                    <h5>
+                                        Кривични спорови
+                                        <span class="caret"><i class="fas fa-caret-down"></i></span>
                                     </h5>
-                                </a></div>
+                                </a>
+                            </div>
                         </div>
                         <div class="panel-collapse collapse" id="collapse2">
                             <div class="panel-body">
@@ -161,9 +156,12 @@
                             <div class="panel-title">
                                 <a class="btnPanel" data-toggle="collapse" role="button" href="#collapse3"
                                     aria-expanded="false" aria-controls="collapse3">
-                                    <h5>Стопански спорови <span class="caret"><i class="fas fa-caret-down"></i></span>
+                                    <h5>
+                                        Стопански спорови
+                                        <span class="caret"><i class="fas fa-caret-down"></i></span>
                                     </h5>
-                                </a></div>
+                                </a>
+                            </div>
                         </div>
                         <div class="panel-collapse collapse" id="collapse3">
                             <div class="panel-body">
@@ -183,9 +181,12 @@
                             <div class="panel-title">
                                 <a class="btnPanel" data-toggle="collapse" role="button" href="#collapse4"
                                     aria-expanded="false" aria-controls="collapse4">
-                                    <h5>Останати услуги <span class="caret"><i class="fas fa-caret-down"></i></span>
+                                    <h5>
+                                        Останати услуги
+                                        <span class="caret"><i class="fas fa-caret-down"></i></span>
                                     </h5>
-                                </a></div>
+                                </a>
+                            </div>
                         </div>
                         <div class="panel-collapse collapse" id="collapse4">
                             <div class="panel-body">
@@ -198,36 +199,43 @@
                             </div>
                         </div>
                     </div>
-
                 </div>
             </div>
         </div>
 
         <div class="row advokatRow">
             <div class="col-12 col-md-9 advokatText" data-aos="fade-down" data-aos-duration="700" id="vlado">
-                <h3>АДВОКАТ
+                <h3>
+                    АДВОКАТ
                     <br />
-                    ВЛАДО АЛЕКСИЈЕВСКИ</h3>
+                    ВЛАДО АЛЕКСИЈЕВСКИ
+                </h3>
                 <div class="advPink">
-                    <p>Нашиот основен фокус е граѓанска парница, надополнет со нашите исклучително силни познавања
-                        во
-                        стопански и
-                        кривични парници, како и силни судски практики.</p>
                     <p>
-                        Ние сме познати по нашите креативни, аналитички, агресивни
-                        парници и подготвеност да преземеме тешки случаи. </p>
-                    <p>Ние ги разгледуваме и ги надминуваме своите противници и разбираме како да победиме за нашите
-                        клиенти.</p>
-                    <p>Имаме долгогодишно искуство во судење и
-                        секогаш сме подготвени за судење, претставувајќи ги тужителите и обвинетите во секоја област
-                        на
-                        парница. </p>
-                    <p>Ние сме посветени на спроведување на агресивни и иновативни пристапи кон
-                        најпредизвикувачките правни работи на нашите клиенти. </p>
+                        Нашиот основен фокус е граѓанска парница, надополнет со нашите
+                        исклучително силни познавања во стопански и кривични парници, како
+                        и силни судски практики.
+                    </p>
+                    <p>
+                        Ние сме познати по нашите креативни, аналитички, агресивни парници
+                        и подготвеност да преземеме тешки случаи.
+                    </p>
+                    <p>
+                        Ние ги разгледуваме и ги надминуваме своите противници и разбираме
+                        како да победиме за нашите клиенти.
+                    </p>
+                    <p>
+                        Имаме долгогодишно искуство во судење и секогаш сме подготвени за
+                        судење, претставувајќи ги тужителите и обвинетите во секоја област
+                        на парница.
+                    </p>
+                    <p>
+                        Ние сме посветени на спроведување на агресивни и иновативни
+                        пристапи кон најпредизвикувачките правни работи на нашите клиенти.
+                    </p>
                 </div>
             </div>
-            <div class="col-12 col-md-3 fencer" data-aos="fade-up" data-aos-duration="700">
-            </div>
+            <div class="col-12 col-md-3 fencer" data-aos="fade-up" data-aos-duration="700"></div>
         </div>
 
         <div class="row bgFen">
@@ -238,30 +246,37 @@
             <div class="col-12 col-md-3 fencer fencer2" data-aos="fade-down" data-aos-duration="700" id="aleksandar">
             </div>
             <div class="col-12 col-md-9 advokatText advokatText2" data-aos="fade-up" data-aos-duration="700">
-                <h3>АДВОКАТ
+                <h3>
+                    АДВОКАТ
                     <br />
-                    АЛЕКСАНДАР АЛЕКСИЈЕВСКИ</h3>
+                    АЛЕКСАНДАР АЛЕКСИЈЕВСКИ
+                </h3>
                 <div class="advPink advPink2">
-                    <p>Ние сме одговорни, агилни и енергични. Никогаш не се откажуваме додека не развиеме најдобра
-                        стратегија за нашите клиенти.</p>
-                    <p>Ние сме практични и директни. Го разбираме и унапредуваме бизнисот на нашите клиенти.</p>
+                    <p>
+                        Ние сме одговорни, агилни и енергични. Никогаш не се откажуваме
+                        додека не развиеме најдобра стратегија за нашите клиенти.
+                    </p>
+                    <p>
+                        Ние сме практични и директни. Го разбираме и унапредуваме бизнисот
+                        на нашите клиенти.
+                    </p>
 
-                    <p>Ние секогаш сме подготвени да одиме во акција.
-                        Го наоѓаме најдобриот агол за правен напад на противникот.</p>
-
+                    <p>
+                        Ние секогаш сме подготвени да одиме во акција. Го наоѓаме
+                        најдобриот агол за правен напад на противникот.
+                    </p>
                 </div>
             </div>
-
         </div>
-
 
         <div class="row testRow" id="testimonials">
             <div class="col-12">
-                <h3 class="text-center" data-aos="fade-up" data-aos-duration="700">Препораки на клиенти</h3>
+                <h3 class="text-center" data-aos="fade-up" data-aos-duration="700">
+                    Препораки на клиенти
+                </h3>
             </div>
 
-            <div class="col-10 offset-1  col-xl-6 offset-xl-3 testRowFlex" data-aos="fade-down" data-aos-duration="700">
-
+            <div class="col-10 offset-1 col-xl-8 offset-xl-2 testRowFlex" data-aos="fade-down" data-aos-duration="700">
                 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                     <ul class="carousel-indicators">
                         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -269,69 +284,113 @@
                         <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
                         <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
                         <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
                     </ul>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <h4>Одлично познавање на граѓанското право и процедури, а со тоа и целосно остварување на
-                                моите интереси.</h4>
+                            <h4>
+                                Големо познавање на граѓанското право и процедури, а со тоа и
+                                целосно остварување на моите интереси.
+                            </h4>
                             <p>Огнен Манчевски</p>
                         </div>
                         <div class="carousel-item">
-                            <h4>Врвна заштита на доверителските права во стечајна постапка. Го препорачувам адвокат
-                                Владо Алексијевски.</h4>
+                            <h4>
+                                Најдобра адвокатска канцеларија. За време на
+                                COVID-19, очигледно не можев физички да се сретнам 
+                                со адвокат Александар, па бев загрижена за ангажирање на адвокат со кој
+                                не можев да се сретнам. Александар организираше повик на Viber i Zoom
+                                веднаш и тоа што рече дека ќе го направи, го направи најдобро што може.
+                            </h4>
+                            <p>Наталија Јордановска</p>
+                        </div>
+                        <div class="carousel-item">
+                            <h4>
+                                Врвна заштита на доверителските права во стечајна постапка. Го
+                                препорачувам адвокат Владо Алексијевски.
+                            </h4>
                             <p>Александар Маринчески</p>
                         </div>
                         <div class="carousel-item">
-                            <h4>Одлична соработка и лојалност кон својот клиент. Препорака од мене.</h4>
+                            <h4>
+                                Одлична соработка и лојалност кон својот клиент. Препорака од
+                                мене.
+                            </h4>
                             <p>Никола Мицковски</p>
                         </div>
                         <div class="carousel-item">
-                            <h4>Достапност во секое време и креативност во заштита на странката. Препорака за адвокат
-                                Александар.</h4>
+                            <h4>
+                                Достапност во секое време и креативност во заштита на
+                                странката. Препорака за адвокат Александар.
+                            </h4>
                             <p>Гоце Стефаноски</p>
                         </div>
                         <div class="carousel-item">
-                            <h4>Одлично решавање на имотен спор. Без дополнителни драми и нервози.</h4>
+                            <h4>
+                                Одлично решавање на имотен спор. Без дополнителни драми и
+                                нервози.
+                            </h4>
                             <p>Мартин Блажевски</p>
                         </div>
+                        <div class="carousel-item">
+                            <h4>
+                                Владо Алексијевски ми помогна да завршам долгогодишно дело кое
+                                се обидувам да го завршам со години. Тој работеше многу вредно до
+                                крај и јас сум му многу благодарнa!
+                            </h4>
+                            <p>Светлана Богданоска</p>
+                        </div>
                     </div>
-
                 </div>
             </div>
         </div>
 
-
         <div class="row contactRow">
-            <div class="col-12 contactText text-center">
+            <div class="col-12 offset-0 contactText text-center" id="contact" data-aos="fade-up" data-aos-duration="700">
                 <h3>КОНТАКТ</h3>
             </div>
 
-            <div class="col-10 offset-1 col-md-5 offset-md-1">
-                <div id="googleMap" style="height:350px;"></div>
+            <div class="col-12 offset-0 col-md-6 offset-md-0 col-xl-5 offset-xl-1" data-aos="fade-down" data-aos-duration="700">
+                <p class="street">Булевар Туристичка бр.50, 6000 Охрид</p>
+                <p class="workingHour">Работно време: пон - пет од 08:00 до 16:00 часот</p>
+                <div id="googleMap"></div>
             </div>
 
-            <div class="col-10 offset-1 col-md-5 offset-md-0">
-                <div></div>
+            <div class="col-12 offset-0 col-md-6 offset-md-0 col-xl-5 offset-xl-0 street2" data-aos="fade-down" data-aos-duration="700">
+                <div class="bottDiv">
+                    <br />
+                    <p class="bottAdv">Адвокат</p>
+                    <p>Алексијевски Владо</p>
+                    <p>070 212 042</p>
+                    <p class="mailAdv">advokat.vladoaleksijevski@gmail.com</p>
+                </div>
+                <div>
+                    <br />
+                    <p class="bottAdv2">Адвокат</p>
+                    <p>Алексијевски Александар</p>
+                    <p  class="lastNum">046 511 608</p>
+                </div>
             </div>
         </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+        <div class="row">
+            <div class="col-12">
+        <footer class="page-footer">
+            <div class="row">
+                <div class="col-12">
+                    <div class="footer-copyright">
+                        © 2020 Vlado Aleksijevski, All Rights Reserved        
+                    </div>
+                   
+                </div>
+            </div>
+        </footer>
+    </div>
+</div>
 
 
     </div>
-
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
@@ -349,16 +408,18 @@
     <script>
         function myMap() {
             var mapProp = {
-                center: new google.maps.LatLng(51.508742, -0.120850),
+                center: new google.maps.LatLng(51.508742, -0.12085),
                 zoom: 5,
             };
-            var map = new google.maps.Map(document.getElementById("googleMap"), mapProp);
+            var map = new google.maps.Map(
+                document.getElementById("googleMap"),
+                mapProp
+            );
         }
     </script>
     <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY&callback=myMap"></script>
 
     <script src="js/main.js"></script>
-
 </body>
 
 </html>
