--- a/index.html
+++ b/index.html
@@ -353,20 +353,18 @@
 
             <div class="col-12 offset-0 col-md-6 offset-md-0 col-xl-5 offset-xl-1" data-aos="fade-down" data-aos-duration="700">
                 <p class="street">Булевар Туристичка бр.50, 6000 Охрид</p>
-                <p class="workingHour">Работно време: пон - пет од 08:00 до 16:00 часот</p>
+                <p class="workingHour">Работно време: пон - пет од 08:00 до 16:00</p>
                 <div id="googleMap"></div>
             </div>
 
             <div class="col-12 offset-0 col-md-6 offset-md-0 col-xl-5 offset-xl-0 street2" data-aos="fade-down" data-aos-duration="700">
                 <div class="bottDiv">
-                    <br />
                     <p class="bottAdv">Адвокат</p>
                     <p>Алексијевски Владо</p>
                     <p>070 212 042</p>
                     <p class="mailAdv">advokat.vladoaleksijevski@gmail.com</p>
                 </div>
                 <div>
-                    <br />
                     <p class="bottAdv2">Адвокат</p>
                     <p>Алексијевски Александар</p>
                     <p  class="lastNum">046 511 608</p>
