--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                         <div class="carousel-item">
                             <h4>
                                 Најдобра адвокатска канцеларија. За време на
-                                COVID-19, очигледно не можев физички да се сретнам 
+                                COVID-19, очигледно не можев физички да се сретнам
                                 со адвокат Александар, па бев загрижена за ангажирање на адвокат со кој
                                 не можев да се сретнам. Александар организираше повик на Viber i Zoom
                                 веднаш и тоа што рече дека ќе го направи, го направи најдобро што може.
@@ -347,45 +347,48 @@
         </div>
 
         <div class="row contactRow">
-            <div class="col-12 offset-0 contactText text-center" id="contact" data-aos="fade-up" data-aos-duration="700">
+            <div class="col-12 offset-0 contactText text-center" id="contact" data-aos="fade-up"
+                data-aos-duration="700">
                 <h3>КОНТАКТ</h3>
             </div>
 
-            <div class="col-12 offset-0 col-md-6 offset-md-0 col-xl-5 offset-xl-1" data-aos="fade-down" data-aos-duration="700">
+            <div class="col-12 offset-0 col-md-6 offset-md-0 col-xl-5 offset-xl-1" data-aos="fade-down"
+                data-aos-duration="700">
                 <p class="street">Булевар Туристичка бр.50, 6000 Охрид</p>
                 <p class="workingHour">Работно време: пон - пет од 08:00 до 16:00</p>
                 <div id="googleMap"></div>
             </div>
 
-            <div class="col-12 offset-0 col-md-6 offset-md-0 col-xl-5 offset-xl-0 street2" data-aos="fade-down" data-aos-duration="700">
+            <div class="col-12 offset-0 col-md-6 offset-md-0 col-xl-5 offset-xl-0 street2" data-aos="fade-down"
+                data-aos-duration="700">
                 <div class="bottDiv">
                     <p class="bottAdv">Адвокат</p>
                     <p>Алексијевски Владо</p>
                     <p>070 212 042</p>
                     <p class="mailAdv">advokat.vladoaleksijevski@gmail.com</p>
                 </div>
-                <div>
+                <div class="botDivAdv2">
                     <p class="bottAdv2">Адвокат</p>
                     <p>Алексијевски Александар</p>
-                    <p  class="lastNum">046 511 608</p>
+                    <p class="lastNum">046 511 608</p>
                 </div>
             </div>
         </div>
 
         <div class="row">
             <div class="col-12">
-        <footer class="page-footer">
-            <div class="row">
-                <div class="col-12">
-                    <div class="footer-copyright">
-                        © 2020 Vlado Aleksijevski, All Rights Reserved        
+                <footer class="page-footer">
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="footer-copyright">
+                                © 2020 Vlado Aleksijevski, All Rights Reserved
+                            </div>
+
+                        </div>
                     </div>
-                   
-                </div>
+                </footer>
             </div>
-        </footer>
-    </div>
-</div>
+        </div>
 
 
     </div>
