--- a/english.html
+++ b/english.html
@@ -336,10 +336,10 @@
                     <p>070 212 042</p>
                     <p class="mailAdv">advokat.vladoaleksijevski@gmail.com</p>
                 </div>
-                <div>
+                <div class="botDivAdv2">
                     <p class="bottAdv2">Lawyer</p>
                     <p>Aleksijevski Aleksandar</p>
-                    <p  class="lastNum">046 511 608</p>
+                    <p class="lastNum">046 511 608</p>
                 </div>
             </div>
         </div>
@@ -348,9 +348,9 @@
             <div class="row">
                 <div class="col-12">
                     <div class="footer-copyright">
-                        © 2020 Vlado Aleksijevski, All Rights Reserved        
+                        © 2020 Vlado Aleksijevski, All Rights Reserved
                     </div>
-                   
+
                 </div>
             </div>
         </footer>
