--- a/index.html
+++ b/index.html
@@ -356,7 +356,11 @@
                 data-aos-duration="700">
                 <p class="street">Булевар Туристичка бр.50, 6000 Охрид</p>
                 <p class="workingHour">Работно време: пон - пет од 08:00 до 16:00</p>
-                <div id="googleMap"></div>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3705.9280368503714!2d20.801304556812237!3d41.11694211714864!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1350dca1f21405b5%3A0x10fa66cca37d7344!2sBoulevard%20Turistichka%2050%2C%20Ohrid%206000!5e0!3m2!1sen!2smk!4v1596369379317!5m2!1sen!2smk"
+                    frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"
+                    id="googleMap"></iframe>
+                <!-- <div id="googleMap"></div> -->
             </div>
 
             <div class="col-12 offset-0 col-md-6 offset-md-0 col-xl-5 offset-xl-0 street2" data-aos="fade-down"
@@ -406,10 +410,10 @@
         AOS.init();
     </script>
 
-    <script>
+    <!-- <script>
         function myMap() {
             var mapProp = {
-                center: new google.maps.LatLng(51.508742, -0.12085),
+                center: new google.maps.LatLng(41.1171853, 20.8001327),
                 zoom: 5,
             };
             var map = new google.maps.Map(
@@ -418,7 +422,7 @@
             );
         }
     </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY&callback=myMap"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY&callback=myMap"></script> -->
 
     <script src="js/main.js"></script>
 </body>
