--- a/english.html
+++ b/english.html
@@ -319,11 +319,13 @@
         </div>
 
         <div class="row contactRow">
-            <div class="col-12 offset-0 contactText text-center" id="contact">
+            <div class="col-12 offset-0 contactText text-center" id="contact" id="contact" data-aos="fade-down"
+                data-aos-duration="700">
                 <h3>CONTACT</h3>
             </div>
 
-            <div class="col-12 offset-0 col-md-6 offset-md-0 col-xl-5 offset-xl-1">
+            <div class="col-12 offset-0 col-md-6 offset-md-0 col-xl-5 offset-xl-1" id="contact" data-aos="fade-up"
+                data-aos-duration="700">
                 <p class="street">Boulevard Turistichka no.50, 6000 Ohrid</p>
                 <p class="workingHour">Working hours: Mon - Fri from 08:00 to 16:00</p>
                 <iframe
@@ -332,7 +334,8 @@
                     id="googleMap"></iframe>
             </div>
 
-            <div class="col-12 offset-0 col-md-6 offset-md-0 col-xl-5 offset-xl-0 street2">
+            <div class="col-12 offset-0 col-md-6 offset-md-0 col-xl-5 offset-xl-0 street2" id="contact"
+                data-aos="fade-up" data-aos-duration="700">
                 <div class="bottDiv">
                     <p class="bottAdv">Lawyer</p>
                     <p>Aleksijevski Vlado</p>
