--- a/index.html
+++ b/index.html
@@ -347,12 +347,12 @@
         </div>
 
         <div class="row contactRow">
-            <div class="col-12 offset-0 contactText text-center" id="contact" data-aos="fade-up"
+            <div class="col-12 offset-0 contactText text-center" id="contact" data-aos="fade-down"
                 data-aos-duration="700">
                 <h3>КОНТАКТ</h3>
             </div>
 
-            <div class="col-12 offset-0 col-md-6 offset-md-0 col-xl-5 offset-xl-1" data-aos="fade-down"
+            <div class="col-12 offset-0 col-md-6 offset-md-0 col-xl-5 offset-xl-1" data-aos="fade-up"
                 data-aos-duration="700">
                 <p class="street">Булевар Туристичка бр.50, 6000 Охрид</p>
                 <p class="workingHour">Работно време: пон - пет од 08:00 до 16:00</p>
@@ -362,7 +362,7 @@
                     id="googleMap"></iframe>
             </div>
 
-            <div class="col-12 offset-0 col-md-6 offset-md-0 col-xl-5 offset-xl-0 street2" data-aos="fade-down"
+            <div class="col-12 offset-0 col-md-6 offset-md-0 col-xl-5 offset-xl-0 street2" data-aos="fade-up"
                 data-aos-duration="700">
                 <div class="bottDiv">
                     <p class="bottAdv">Адвокат</p>
