--- a/english.html
+++ b/english.html
@@ -255,7 +255,8 @@
 
         <div class="row testRow" id="testimonials">
             <div class="col-12">
-                <h3 class="text-center" data-aos="fade-up" data-aos-duration="700">Client Testimonials</h3>
+                <h3 class="text-center text-uppercase" data-aos="fade-up" data-aos-duration="700">Client Testimonials
+                </h3>
             </div>
             <div class="col-10 offset-1  col-xl-8 offset-xl-2 testRowFlex" data-aos="fade-down" data-aos-duration="700">
 
