--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
         <div class="row testRow" id="testimonials">
             <div class="col-12">
                 <h3 class="text-center" data-aos="fade-up" data-aos-duration="700">
-                    Препораки на клиенти
+                    ПРЕПОРАКИ НА КЛИЕНТИ
                 </h3>
             </div>
 
