--- a/english.html
+++ b/english.html
@@ -327,8 +327,9 @@
 
             <div class="col-12 offset-0 col-md-6 offset-md-0 col-xl-5 offset-xl-1" id="contact" data-aos="fade-up"
                 data-aos-duration="700">
-                <p class="street">Boulevard Turistichka no.50, 6000 Ohrid</p>
-                <p class="workingHour">Working hours: Mon - Fri from 08:00 to 16:00</p>
+                <p class="street"><i class="fas fa-map-marker-alt" style="color: red;"></i> Boulevard Turistichka no.50,
+                    6000 Ohrid</p>
+                <p class="workingHour"><i class="fas fa-clock"></i> Working hours: Mon - Fri from 08:00 to 16:00</p>
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3705.9280368503714!2d20.801304556812237!3d41.11694211714864!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1350dca1f21405b5%3A0x10fa66cca37d7344!2sBoulevard%20Turistichka%2050%2C%20Ohrid%206000!5e0!3m2!1sen!2smk!4v1596369379317!5m2!1sen!2smk"
                     frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"
@@ -340,13 +341,13 @@
                 <div class="bottDiv">
                     <p class="bottAdv">Lawyer</p>
                     <p>Aleksijevski Vlado</p>
-                    <p>070 212 042</p>
-                    <p class="mailAdv">advokat.vladoaleksijevski@gmail.com</p>
+                    <p><i class="fas fa-mobile-alt"></i> 070 212 042</p>
+                    <p class="mailAdv"><i class="fas fa-envelope"></i> advokat.vladoaleksijevski@gmail.com</p>
                 </div>
                 <div class="botDivAdv2">
                     <p class="bottAdv2">Lawyer</p>
                     <p>Aleksijevski Aleksandar</p>
-                    <p class="lastNum">046 511 608</p>
+                    <p class="lastNum"><i class="fas fa-mobile-alt"></i> 046 511 608</p>
                 </div>
             </div>
         </div>
