--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
                 <div class="botDivAdv2">
                     <p class="bottAdv2">Адвокат</p>
                     <p>Алексијевски Александар</p>
-                    <p class="lastNum"><i class="fas fa-mobile-alt"></i> 046 511 608</p>
+                    <p class="lastNum"><i class="fas fa-phone"></i> 046 511 608</p>
                 </div>
             </div>
         </div>
