--- a/english.html
+++ b/english.html
@@ -347,7 +347,8 @@
                 <div class="botDivAdv2">
                     <p class="bottAdv2">Lawyer</p>
                     <p>Aleksijevski Aleksandar</p>
-                    <p class="lastNum"><i class="fas fa-mobile-alt"></i> 046 511 608</p>
+                    <p class="lastNum"><i class="fas fa-phone"></i> 046 511 608</p>
+
                 </div>
             </div>
         </div>
