--- a/index.html
+++ b/index.html
@@ -217,18 +217,20 @@
                         и силни судски практики.
                     </p>
                     <p>
-                        Ние сме познати по нашите креативни, аналитички, агресивни парници
+                        Познати сме по нашите креативни, аналитички, агресивни парници
                         и подготвеност да преземеме тешки случаи.
                     </p>
                     <p>
-                        Ние ги разгледуваме и ги надминуваме своите противници и разбираме
+                        Ние ги анализираме своите противници и разбираме
                         како да победиме за нашите клиенти.
                     </p>
+
                     <p>
                         Имаме долгогодишно искуство во судење и секогаш сме подготвени за
                         судење, претставувајќи ги тужителите и обвинетите во секоја област
                         на парница.
                     </p>
+
                     <p>
                         Ние сме посветени на спроведување на агресивни и иновативни
                         пристапи кон најпредизвикувачките правни работи на нашите клиенти.
@@ -261,8 +263,9 @@
                         на нашите клиенти.
                     </p>
 
+
                     <p>
-                        Ние секогаш сме подготвени да одиме во акција. Го наоѓаме
+                        Секогаш сме подготвени да одиме во акција. Го наоѓаме
                         најдобриот агол за правен напад на противникот.
                     </p>
                 </div>
