--- a/english.html
+++ b/english.html
@@ -45,7 +45,8 @@
         <div class="collapse navbar-collapse" id="navbar1">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link active" href="#home" id="doma">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link active first" href="#home" id="doma">Home <span
+                            class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#work">Work</a>
