--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
         <div class="collapse navbar-collapse" id="navbar1">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link active" href="#home" id="doma">Дома <span class="sr-only">(current)</span></a>
+                    <a class="nav-link active first" href="#home" id="doma">Дома <span
+                            class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#work">Работа</a>
